Search server (#5)
* create class Main and SearchServer

* package jar

* remove frontend